--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ sysinfo.txt
 Icon?
 ehthumbs.db
 Thumbs.db
+IdleGame/.vs/IdleGame/FileContentIndex/67a22c59-7366-48f7-b732-477312005fb1.vsidx
+IdleGame/.vs/IdleGame/FileContentIndex/52259ef8-34a2-4aaf-b88a-c6372f3c7368.vsidx
